---------------------------------------------------------------------------
Version 3.22.2 [v3-stable] (rgerhards), 2009-07-??
- bugfix: sending syslog messages with zip compression did not work
- clarified use of $ActionsSendStreamDriver[AuthMode/PermittedPeers]
  in doc set (require TLS drivers)
---------------------------------------------------------------------------
Version 3.22.1 [v3-stable] (rgerhards), 2009-07-02
- bugfix: invalid error message issued if $inlcudeConfig was on an empty
  set of files (e.g. *.conf, where none such files existed)
  thanks to Michael Biebl for reporting this bug
- bugfix: when run in foreground (but not in debug mode), a 
  debug message ("DoDie called") was emitted at shutdown. Removed.
  thanks to Michael Biebl for reporting this bug
- bugfix: some garbagge was emitted to stderr on shutdown. This
  garbage consisted of file names, which were written during 
  startup (key point: not a pointer error)
  thanks to Michael Biebl for reporting this bug
- bugfix: startup and shutdown message were emitted to stdout
  thanks to Michael Biebl for reporting this bug
- bugfix: error messages were not emitted to stderr in forked mode
  (stderr and stdo are now kept open across forks)
- bugfix: internal messages were emitted to whatever file had fd2 when
  rsyslogd ran in forked mode (as usual!)
  Thanks to varmojfekoj for the patch
- small enhancement: config validation run now exits with code 1 if an
  error is detected. This change is considered important but small enough
  to apply it directly to the stable version. [But it is a border case,
  the change requires more code than I had hoped. Thus I have NOT tried
  to actually catch all cases, this is left for the current devel
  releases, if necessary]
- bugfix: light and full delay watermarks had invalid values, badly
  affecting performance for delayable inputs
- bugfix: potential segfault issue when multiple $UDPServerRun directives