@@ -33,6 +33,9 @@ Starts a RELP server on selected port</li>
 <b>Caveats/Known Bugs:</b>
 <ul>
 <li>see description</li>
+<li>To obtain the remote system's IP address, you need to have at least
+librelp 1.0.0 installed. Versions below it return the hostname instead
+of the IP address.</li>
 </ul>
 <p><b>Sample:</b></p>
 <p>This sets up a RELP server on port 20514.<br>
