@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------
 Version 3.22.2 [v3-stable] (rgerhards), 2009-07-??
+- enhance: imrelp now also provides remote peer's IP address 
+  [if librelp != 1.0.0 is used]
 - bugfix: sending syslog messages with zip compression did not work
 - clarified use of $ActionsSendStreamDriver[AuthMode/PermittedPeers]
   in doc set (require TLS drivers)
